remove login logic

--- a/src/components/pages/search-page/search-page.module.css
+++ b/src/components/pages/search-page/search-page.module.css
@@ -3,7 +3,7 @@
 .search-books-bar {
     position: fixed;
     width: 100%;
-    top: 5rem;
+    top: 0;
     left: 0;
     z-index: 5;
     display: flex;
