--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -1,17 +1,17 @@
 .header {
   width: 100%;
-  height: 5rem;
-  background-color: #38015c;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  height: 3rem;
+  background-color: #cbcfca;
+  box-shadow: 0 1px 4px rgba(36, 82, 23, 0.2);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .logo {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1rem;
-  color: white;
+  color: black;
   margin: 0;
 }
 
