--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -11,8 +11,12 @@
 .logo {
   font-family: "Lato", sans-serif;
   font-size: 1rem;
+  color: rgb(251, 238, 238);
+  margin: 5rem;
+}
+
+.active {
   color: black;
-  margin: 0;
 }
 
 .header ul {
